<resources>
    <string name="app_name">Data Karyawan</string>
    <string name="nama">Nama</string>
    <string name="nip">NIP</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="divisi">Divisi</string>
    <string name="btnTambah">Tambahkan</string>
    <string name="btnData">Lihat Data</string>
    <string name="btnEdit">Edit</string>
    <string name="btnDelete">Hapus</string>
    <string name="error">Kesalahan Jaringan</string>
    <string-array name="daftar_divisi">
        <item>Programmer</item>
        <item>TSS</item>
    </string-array>
</resources>